# voidhack_csgo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
csgo/: CMakeLists.txt  csgo.cpp  globals.hpp  hooks.cpp  hooks.hpp  interfaces.hpp  memory.hpp  render.cpp
csgo/features/: bunny_hop.cpp  esp.cpp  testfeature.cpp
csgo/game/entities/: c_base_entity.hpp  c_base_player.hpp  i_client_entity.hpp
csgo/game/interfaces/: client.hpp  debugoverlay.hpp  engine.hpp  playerinfo.hpp  surface.hpp
csgo/game/math/: math.hpp
csgo/game/misc/: netvars.cpp  netvars.hpp  usercmd.hpp
csgo/menu/: menu.cpp
